--- a/contact.html
+++ b/contact.html
@@ -44,10 +44,10 @@ Author URL: http://w3layouts.com
                   <li class="nav-item @@about__active">
                       <a class="nav-link" href="about.html">About</a>
                   </li>
-                  <li class="nav-item active">
+                  <li class="nav-item @@pages__active">
                       <a class="nav-link" href="our-apps.html">Our Apps</a>
                   </li>
-                  <li class="nav-item @@contact__active">
+                  <li class="nav-item active">
                       <a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</a>
                   </li>
                   <li class="nav-item ml-3 mr-2">
