--- a/index.html
+++ b/index.html
@@ -20,13 +20,10 @@
 <header id="site-header" class="fixed-top">
   <div class="container">
       <nav class="navbar navbar-expand-lg stroke">
-          <!-- <a class="navbar-brand" href="index.html">
-              <span class="fa fa-cube"></span> Seven Star Apps
-          </a> -->
           <!-- if logo is image enable this    -->
-      <a class="navbar-brand" href="#index.html">
-          <img src="assets/images/logo.png" alt="Your logo" title="Your logo" style="height:35px;" />
-      </a>
+          <a class="navbar-brand" href="index.html">
+            <img src="assets/images/logo.png" alt="Seven Star Apps Logo" title="Seven Star Apps Logo" style="height:50px;" />
+          </a>
           <button class="navbar-toggler  collapsed bg-gradient" type="button" data-toggle="collapse"
               data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
               aria-label="Toggle navigation">
@@ -44,7 +41,7 @@
                       <a class="nav-link" href="about.html">About</a>
                   </li>
                   <li class="nav-item @@pages__active">
-                      <a class="nav-link" href="features.html">Our Apps</a>
+                      <a class="nav-link" href="our-apps.html">Our Apps</a>
                   </li>
                   <li class="nav-item @@contact__active">
                       <a class="nav-link" href="contact.html">Contact</a>
