--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Seven Star Apps">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>About- Mobile Applicaiton Developer</title>
+    <title>About- Seven Star Apps Mobile Applicaiton Developer</title>
 
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap" rel="stylesheet">
     
@@ -91,7 +91,7 @@
           <div class="row footer-top-28">
             <div class="col-lg-4 footer-list-28 mt-5">
               <h6 class="footer-title-28">Contact information</h6>
-              <p>Feel free to contact us at sevenstarapps@outlook.com.</p>
+              <p>Feel free to contact us at sevenstarapps@outlook.com</p>
 
               <div class="main-social-footer-28 mt-3">
                 <ul class="social-icons">
@@ -123,18 +123,15 @@
                 <div class="col-md-4 col-6 footer-list-28 mt-5">
                   <h6 class="footer-title-28">Useful links</h6>
                   <ul>
-                    <li><a href="features.html">App Features</a></li>
+                    <li><a href="our-apps.html">Our Apps</a></li>
                     <li><a href="about.html">About us</a></li>
-                    <li><a href="#blog">Blog posts</a></li>
-                    <li><a href="#pricing">Pricing plans</a></li>
                   </ul>
                 </div>
                 <div class="col-md-4 col-6 footer-list-28 mt-5">
-                  <h6 class="footer-title-28">Product help</h6>
+                  <h6 class="footer-title-28">Apps help</h6>
                   <ul>
                     <li><a href="https://sevenstarapps.wixsite.com/privacy-policy">Privacy policy</a></li>
                     <li><a href="mailto: sevenstarapps@outlook.com"> Support</a></li>
-                    <li><a href="#terms">Terms & conditions</a></li>
                   </ul>
                 </div>
                 <div class="col-md-4 footer-list-28 mt-5">
