--- a/our-apps.html
+++ b/our-apps.html
@@ -1,15 +1,12 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
--->
 <!doctype html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <title>App flow - App launch Category Bootstrap Responsive Website Template - Features : W3Layouts</title>
+    <meta name="description" content="Seven Star mobile applications developer for android applications development. Play Store Developer">
+    <meta name="keywords" content="Mobile Applications, Play Store Applications, Android Application, Seven Star Apps, Facebook Video Downloader Android Application, Insta Video Downloader Android Application, Light PDF Android Application, Social Media Status Downloader Android Application, PDF Converter Android Application, Photo Motion Video Editor Android Application">
+    <meta name="author" content="Seven Star Apps">
+    <title>Our Apps- Seven Star Apps Mobile Applicaiton Developer</title>
 
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap" rel="stylesheet">
     
@@ -71,8 +68,8 @@ Author URL: http://w3layouts.com
 			<div class="grids-area-hny main-cont-wthree-fea row">
 				<div class="col-lg-4 col-md-6 grids-feature">
 					<div class="area-box">
-            <img src="assets/images/fb-video-downloader-logo.png" class="img-thumbnail" alt="Facebook Video Downloader" title="Facebook Video Downloader" />
-						<h4><a href="#feature" class="title-head">Facebook Video Downloader</a></h4>
+            <a href="facebook-video-downloader.html" class="title-head"><img src="assets/images/fb-video-downloader-logo.png" class="img-thumbnail" alt="Facebook Video Downloader" title="Facebook Video Downloader" /></a>
+						<h4><a href="facebook-video-downloader.html" class="title-head">Facebook Video Downloader</a></h4>
 						<p>There is a lot of fun stuff on Facebook. But you might want to keep some of them as a memory. Facebook Video Downloader is here to help you with that.</p>
 					</div>
 				</div>
@@ -122,7 +119,7 @@ Author URL: http://w3layouts.com
           <div class="row footer-top-28">
             <div class="col-lg-4 footer-list-28 mt-5">
               <h6 class="footer-title-28">Contact information</h6>
-              <p>Feel free to contact us at sevenstarapps@outlook.com.</p>
+              <p>Feel free to contact us at sevenstarapps@outlook.com</p>
 
               <div class="main-social-footer-28 mt-3">
                 <ul class="social-icons">
@@ -154,18 +151,15 @@ Author URL: http://w3layouts.com
                 <div class="col-md-4 col-6 footer-list-28 mt-5">
                   <h6 class="footer-title-28">Useful links</h6>
                   <ul>
-                    <li><a href="features.html">App Features</a></li>
+                    <li><a href="our-apps.html">Our Apps</a></li>
                     <li><a href="about.html">About us</a></li>
-                    <li><a href="#blog">Blog posts</a></li>
-                    <li><a href="#pricing">Pricing plans</a></li>
                   </ul>
                 </div>
                 <div class="col-md-4 col-6 footer-list-28 mt-5">
-                  <h6 class="footer-title-28">Product help</h6>
+                  <h6 class="footer-title-28">Apps help</h6>
                   <ul>
                     <li><a href="https://sevenstarapps.wixsite.com/privacy-policy">Privacy policy</a></li>
                     <li><a href="mailto: sevenstarapps@outlook.com"> Support</a></li>
-                    <li><a href="#terms">Terms & conditions</a></li>
                   </ul>
                 </div>
                 <div class="col-md-4 footer-list-28 mt-5">
