--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,3 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
--->
 <!doctype html>
 <html lang="en">
   <head>
@@ -12,7 +8,7 @@ Author URL: http://w3layouts.com
     <meta name="author" content="Seven Star Apps">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>App flow - App launch Category Bootstrap Responsive Website Template - Contact : W3Layouts</title>
+    <title>Contact us- Seven Star Apps Mobile Applicaiton Developer</title>
 
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap" rel="stylesheet">
     
@@ -88,7 +84,7 @@ Author URL: http://w3layouts.com
           <div class="row footer-top-28">
             <div class="col-lg-4 footer-list-28 mt-5">
               <h6 class="footer-title-28">Contact information</h6>
-              <p>Feel free to contact us at sevenstarapps@outlook.com.</p>
+              <p>Feel free to contact us at sevenstarapps@outlook.com</p>
 
               <div class="main-social-footer-28 mt-3">
                 <ul class="social-icons">
@@ -120,18 +116,15 @@ Author URL: http://w3layouts.com
                 <div class="col-md-4 col-6 footer-list-28 mt-5">
                   <h6 class="footer-title-28">Useful links</h6>
                   <ul>
-                    <li><a href="features.html">App Features</a></li>
+                    <li><a href="our-apps.html">Our Apps</a></li>
                     <li><a href="about.html">About us</a></li>
-                    <li><a href="#blog">Blog posts</a></li>
-                    <li><a href="#pricing">Pricing plans</a></li>
                   </ul>
                 </div>
                 <div class="col-md-4 col-6 footer-list-28 mt-5">
-                  <h6 class="footer-title-28">Product help</h6>
+                  <h6 class="footer-title-28">Apps help</h6>
                   <ul>
                     <li><a href="https://sevenstarapps.wixsite.com/privacy-policy">Privacy policy</a></li>
                     <li><a href="mailto: sevenstarapps@outlook.com"> Support</a></li>
-                    <li><a href="#terms">Terms & conditions</a></li>
                   </ul>
                 </div>
                 <div class="col-md-4 footer-list-28 mt-5">
