--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <nav class="navbar navbar-expand-lg stroke">
           <!-- if logo is image enable this    -->
           <a class="navbar-brand" href="index.html">
-            <img src="assets/images/logo.png" alt="Seven Star Apps Logo" title="Seven Star Apps Logo" style="height:50px;" />
+            <img src="assets/images/logo.png" class="img-fluid" alt="Seven Star Apps Logo" title="Seven Star Apps Logo" />
           </a>
           <button class="navbar-toggler  collapsed bg-gradient" type="button" data-toggle="collapse"
               data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
@@ -145,7 +145,7 @@
 	<div class="middle py-5">
 		<div class="container py-xl-5 py-lg-3">
 			<div class="welcome-left text-center py-md-3">
-                <h3 class="mb-4">This Mobile App is available for all android devices.</h3>
+                <h3 class="mb-4">All Mobile Apps are available for all android devices.</h3>
                 <a href="#url"><img src="assets/images/android-store.png" alt="" width="170px" class="img-fluid"></a>
 				<p class="text-italic"></p>
 			</div>
@@ -160,7 +160,7 @@
           <div class="row footer-top-28">
             <div class="col-lg-4 footer-list-28 mt-5">
               <h6 class="footer-title-28">Contact information</h6>
-              <p>Feel free to contact us at sevenstarapps@outlook.com.</p>
+              <p>Feel free to contact us at sevenstarapps@outlook.com</p>
 
               <div class="main-social-footer-28 mt-3">
                 <ul class="social-icons">
@@ -192,18 +192,15 @@
                 <div class="col-md-4 col-6 footer-list-28 mt-5">
                   <h6 class="footer-title-28">Useful links</h6>
                   <ul>
-                    <li><a href="features.html">App Features</a></li>
+                    <li><a href="our-apps.html">Our Apps</a></li>
                     <li><a href="about.html">About us</a></li>
-                    <li><a href="#blog">Blog posts</a></li>
-                    <li><a href="#pricing">Pricing plans</a></li>
                   </ul>
                 </div>
                 <div class="col-md-4 col-6 footer-list-28 mt-5">
-                  <h6 class="footer-title-28">Product help</h6>
+                  <h6 class="footer-title-28">Apps help</h6>
                   <ul>
                     <li><a href="https://sevenstarapps.wixsite.com/privacy-policy">Privacy policy</a></li>
                     <li><a href="mailto: sevenstarapps@outlook.com"> Support</a></li>
-                    <li><a href="#terms">Terms & conditions</a></li>
                   </ul>
                 </div>
                 <div class="col-md-4 footer-list-28 mt-5">
