--- a/facebook-video-downloader.html
+++ b/facebook-video-downloader.html
@@ -1,16 +1,15 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
--->
 <!doctype html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta name="description" content="Facebook Video Downloader is here to help you with that. It's freeware that lets you download HD videos and Facebook stories from Facebook with ease so that your precious moments will not be lost in the flow of time.">
+    <meta name="keywords" content="Mobile Applications, Play Store Applications, Android Application, Seven Star Apps, Facebook Video Downloader Android Application, Social Media Status Downloader, Facebook Story Downloader, Facebook Videos, Facebook Page Video Downloader">
+    <meta name="author" content="Seven Star Apps">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>App flow - App launch Category Bootstrap Responsive Website Template - Features : W3Layouts</title>
-
+    <title>Facebook Video Downloader Android Application</title>
+    <link rel="shortcut icon" type="image/jpg" href="favicon.ico"/>
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap" rel="stylesheet">
     
     <!-- Template CSS -->
@@ -258,8 +257,6 @@ Author URL: http://w3layouts.com
   <!-- //footer-28 block -->
 
   <!-- all js scripts and files here -->
-
-  <script src="assets/js/theme-change.js"></script><!-- theme switch js (light and dark)-->
 
   <script src="assets/js/jquery-3.3.1.min.js"></script><!-- default jQuery -->
 
