--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>Seven Star Apps- Mobile Applicaiton Developer</title>
-
+    <link rel="shortcut icon" type="image/jpg" href="favicon.ico"/>
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap" rel="stylesheet">
     
     <!-- Template CSS -->
@@ -250,8 +250,6 @@
   <!-- //footer-28 block -->
 
   <!-- all js scripts and files here -->
-
-  <script src="assets/js/theme-change.js"></script><!-- theme switch js (light and dark)-->
 
   <script src="assets/js/jquery-3.3.1.min.js"></script><!-- default jQuery -->
 
