--- a/our-apps.html
+++ b/our-apps.html
@@ -6,8 +6,9 @@
     <meta name="description" content="Seven Star mobile applications developer for android applications development. Play Store Developer">
     <meta name="keywords" content="Mobile Applications, Play Store Applications, Android Application, Seven Star Apps, Facebook Video Downloader Android Application, Insta Video Downloader Android Application, Light PDF Android Application, Social Media Status Downloader Android Application, PDF Converter Android Application, Photo Motion Video Editor Android Application">
     <meta name="author" content="Seven Star Apps">
-    <title>Our Apps- Seven Star Apps Mobile Applicaiton Developer</title>
 
+    <title>Our Apps- Seven Star Apps Mobile Applicaiton Developer</title>
+    <link rel="shortcut icon" type="image/jpg" href="favicon.ico"/>
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap" rel="stylesheet">
     
     <!-- Template CSS -->
@@ -209,8 +210,6 @@
   <!-- //footer-28 block -->
 
   <!-- all js scripts and files here -->
-
-  <script src="assets/js/theme-change.js"></script><!-- theme switch js (light and dark)-->
 
   <script src="assets/js/jquery-3.3.1.min.js"></script><!-- default jQuery -->
 
