--- a/facebook-video-downloader.html
+++ b/facebook-video-downloader.html
@@ -47,7 +47,7 @@
                       <a class="nav-link" href="contact.html">Contact</a>
                   </li>
                   <li class="nav-item ml-3 mr-2">
-                      <a href="#download" class="btn btn-primary d-none d-lg-block btn-style">Download Apps</a></li>
+                      <a href="https://play.google.com/store/apps/details?id=com.sevenstar.fbvideodownloader" class="btn btn-primary d-none d-lg-block btn-style">Download Apps</a></li>
               </ul>
           </div>
       </nav>
@@ -212,7 +212,7 @@
                 </div>
                 <div class="col-md-4 footer-list-28 mt-5">
                   <h6 class="footer-title-28">Download</h6>
-                  <a href="#playstore"><img src="assets/images/googleplay.png" class="img-fluid" alt=""></a>
+                  <a href="https://play.google.com/store/apps/details?id=com.sevenstar.fbvideodownloader"><img src="assets/images/googleplay.png" class="img-fluid" alt=""></a>
                   <!-- <a href="#appstore"><img src="assets/images/appstore.png" class="img-fluid mt-md-2" alt=""></a> -->
                 </div>
               </div>
