--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 		<div class="container py-xl-5 py-lg-3">
 			<div class="welcome-left text-center py-md-3">
                 <h3 class="mb-4">All Mobile Apps are available for all android devices.</h3>
-                <a href="#url"><img src="assets/images/android-store.png" alt="" width="170px" class="img-fluid"></a>
+                <a href="https://play.google.com/store/apps/developer?id=Seven.Star+Apps"><img src="assets/images/android-store.png" alt="" width="170px" class="img-fluid"></a>
 				<p class="text-italic"></p>
 			</div>
 		</div>
